<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xml_border_change_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/xml_borderchagne">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/xml_border_edit"
                    android:layout_gravity="center"
                    android:hint="@string/st_oldpass"
                    android:id="@+id/oldpass"
                    android:textSize="13dp"/>

                <EditText
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:hint="@string/st_newpass"
                    android:background="@drawable/xml_border_edit"
                    android:id="@+id/newpass"
                    android:textSize="13dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/xml_border_edit"
                    android:hint="@string/st_renewpass"
                    android:id="@+id/renewpass"
                    android:textSize="13dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/st_CHANGE"
                    android:textColor="#FFFFFF"
                    android:id="@+id/btlog"
                    android:background="@drawable/xml_borderchange2"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/st_cancel"
                    android:background="@drawable/xml_border_edit"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>