<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edkynang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="5"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/count"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_alignEnd="@+id/resend"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/resend"
            android:text="50"
            android:textSize="40dp" />

        <Button
            android:id="@+id/resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_sendagain"
            android:background="@drawable/xml_borderchange2"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/okdialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/exitdialog"
            android:layout_toStartOf="@+id/exitdialog"
            android:text="@string/st_chon"
            android:background="@drawable/xml_borderchange2"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/exitdialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="right"
            android:text="@string/st_thoat"
            android:background="@drawable/xml_borderchange2"
            android:textColor="@color/white"/>
    </RelativeLayout>
</LinearLayout>