<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollnormal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/xml_border_change_layout"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="10dp">
            <EditText
                android:id="@+id/tenct"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="13dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/xml_border_edittext"
                android:layout_gravity="center"
                android:hint="@string/st_hintTenCT"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/tencv"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="13dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/xml_border_edittext"
                android:layout_gravity="center"
                android:hint="@string/st_hintTenCV" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp">

            <Spinner
                android:id="@+id/nganhnghe"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="60"
                android:scrollbarSize="3dp" />

            <EditText
                android:id="@+id/limit"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="40"
                android:layout_marginLeft="2dp"
                android:textSize="13dp"
                android:focusable="false"
                android:inputType="datetime"
                android:hint="@string/st_hintHanNop"
                android:background="@drawable/xml_border_edittext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp">
            <Spinner
                android:id="@+id/spbc"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="50"
                android:layout_marginLeft="2dp"
                android:background="@drawable/xml_border_spinner"/>
            <Spinner
                android:id="@+id/mucluong"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="50"
                android:layout_marginLeft="2dp" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:id="@+id/ednum"
                android:layout_weight="50"
                android:layout_marginLeft="1dp"
                android:inputType="number"
                android:textSize="13dp"
                android:background="@drawable/xml_border_edittext"
                android:hint="@string/st_hintSoLuongTuyen"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp">
            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:id="@+id/eddc"
                android:layout_weight="100"
                android:maxLines="1"
                android:textSize="13dp"
                android:focusable="false"
                android:background="@drawable/xml_border_edittext"
                android:hint="@string/st_andress"/>

        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:counterEnabled="true"
            app:counterMaxLength="1000"
            app:counterTextAppearance="@style/counterText"
            app:counterOverflowTextAppearance="@style/counterOverride">
        <EditText
            android:id="@+id/motacv"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/xml_border_edittext"
            android:gravity="top"
            android:hint="@string/st_hintMoTaCV"
            android:textSize="13dp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:counterEnabled="true"
            app:counterMaxLength="500"
            app:counterTextAppearance="@style/counterText"
            app:counterOverflowTextAppearance="@style/counterOverride">
        <EditText
            android:id="@+id/yeucaukhac"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="top"
            android:textSize="13dp"
            android:background="@drawable/xml_border_edittext"
            android:hint="@string/st_ycKhac"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</ScrollView>